fixing bundles and installer upload path

--- a/releng/org.springsource.ggts.distribution-bundles/pom.xml
+++ b/releng/org.springsource.ggts.distribution-bundles/pom.xml
@@ -101,7 +101,7 @@
 
 									<upload bucketName="${dist.bucket}" toDir="${dist.path.product}"
 										publicRead="true">
-										<fileset dir="${site.target.dir}/products">
+										<fileset dir="${site.target.dir}">
 											<include name="groovy-grails-tool-suite*.zip" />
 											<include name="groovy-grails-tool-suite*.tar.gz" />
 											<include name="groovy-grails-tool-suite*.md5" />
