--- a/releng/org.springsource.sts.distribution-bundles/pom.xml
+++ b/releng/org.springsource.sts.distribution-bundles/pom.xml
@@ -102,7 +102,7 @@
 
 									<upload bucketName="${dist.bucket}" toDir="${dist.path.product}"
 										publicRead="true">
-										<fileset dir="${site.target.dir}/products">
+										<fileset dir="${site.target.dir}">
 											<include name="spring-tool-suite*.zip" />
 											<include name="spring-tool-suite*.tar.gz" />
 											<include name="spring-tool-suite*.md5" />
