fixed wrong s3 upload file patterns for bundles and installers

--- a/releng/org.springsource.ggts.distribution-bundles/pom.xml
+++ b/releng/org.springsource.ggts.distribution-bundles/pom.xml
@@ -93,19 +93,23 @@
 									<delete bucketName="${dist.bucket}">
 										<fileset dir="${dist.path.product}">
 											<include name="groovy-grails-tool-suilte*.zip" />
-											<include name="groovy-grails-tool-suite*.gz" />
-											<include name="groovy-grails-tool-suite*.md5" />
-											<include name="groovy-grails-tool-suite*.sha1" />
+											<include name="groovy-grails-tool-suite*.zip.md5" />
+											<include name="groovy-grails-tool-suite*.zip.sha1" />
+											<include name="groovy-grails-tool-suite*.tar.gz" />
+											<include name="groovy-grails-tool-suite*.tar.gz.md5" />
+											<include name="groovy-grails-tool-suite*.tar.gz.sha1" />
 										</fileset>
 									</delete>
 
 									<upload bucketName="${dist.bucket}" toDir="${dist.path.product}"
 										publicRead="true">
 										<fileset dir="${site.target.dir}">
-											<include name="groovy-grails-tool-suite*.zip" />
+											<include name="groovy-grails-tool-suilte*.zip" />
+											<include name="groovy-grails-tool-suite*.zip.md5" />
+											<include name="groovy-grails-tool-suite*.zip.sha1" />
 											<include name="groovy-grails-tool-suite*.tar.gz" />
-											<include name="groovy-grails-tool-suite*.md5" />
-											<include name="groovy-grails-tool-suite*.sha1" />
+											<include name="groovy-grails-tool-suite*.tar.gz.md5" />
+											<include name="groovy-grails-tool-suite*.tar.gz.sha1" />
 										</fileset>
 									</upload>
 
