--- a/features/org.springsource.sts.product/pom.xml
+++ b/features/org.springsource.sts.product/pom.xml
@@ -38,13 +38,13 @@
 		<profile>
 			<id>e38</id>
 			<properties>
-				<sites>http://download.eclipse.org/releases/juno/,http://download.jboss.org/jbosstools/updates/m2eclipse-wtp/,http://dist.springsource.org/release/AJDT/configurator/,http://dist.springsource.com/${dist.type}/TOOLS/eclipse-integration-commons/${dist.eclipse-integration-commons-version}</sites>
+				<sites>http://download.eclipse.org/releases/juno/,http://download.jboss.org/jbosstools/updates/m2eclipse-wtp/,http://repository.tesla.io:8081/nexus/content/sites/m2e.extras/m2eclipse-buildhelper/0.15.0/N/0.15.0.201207090124/,http://dist.springsource.org/release/AJDT/configurator/,http://dist.springsource.com/${dist.type}/TOOLS/eclipse-integration-commons/${dist.eclipse-integration-commons-version}</sites>
 			</properties>
 		</profile>
 		<profile>
 			<id>e42</id>
 			<properties>
-				<sites>http://download.eclipse.org/releases/juno/,http://download.jboss.org/jbosstools/updates/m2eclipse-wtp/,http://dist.springsource.org/release/AJDT/configurator/,http://dist.springsource.com/${dist.type}/TOOLS/eclipse-integration-commons/${dist.eclipse-integration-commons-version}</sites>
+				<sites>http://download.eclipse.org/releases/juno/,http://download.jboss.org/jbosstools/updates/m2eclipse-wtp/,http://repository.tesla.io:8081/nexus/content/sites/m2e.extras/m2eclipse-buildhelper/0.15.0/N/0.15.0.201207090124/,http://dist.springsource.org/release/AJDT/configurator/,http://dist.springsource.com/${dist.type}/TOOLS/eclipse-integration-commons/${dist.eclipse-integration-commons-version}</sites>
 			</properties>
 		</profile>
 	</profiles>
