--- a/features/org.springsource.sts.product/pom.xml
+++ b/features/org.springsource.sts.product/pom.xml
@@ -26,6 +26,7 @@
 		
 <!--		<tycho.eclipserun.arguments>${tycho.eclipserun.mirror} ${tycho.eclipserun.proxyHost} ${tycho.eclipserun.proxyPort} ${tycho.eclipserun.exclude} ${tycho.eclipserun.connect} ${tycho.eclipserun.read}</tycho.eclipserun.arguments> -->
 		<tycho.eclipserun.arguments>-Declipse.p2.mirrors=false</tycho.eclipserun.arguments>
+		<skip.eclipserun.proxies>true</skip.eclipserun.proxies>
 	</properties>
 
 	<profiles>
@@ -245,6 +246,30 @@
 								  <entry  key="id" value="org.springsource.sts"/>
 								  <entry  key="version" value="${unqualifiedVersion}.${p2.qualifier}"/>
 								  <entry  key="package" value="spring-tool-suite-${unqualifiedVersion}.${p2.qualifier}-${dist.target}-win32-x86_64.zip"/>
+								</propertyfile>
+							</target>
+						</configuration>
+						<goals>
+							<goal>run</goal>
+						</goals>
+					</execution>
+
+					<execution>
+						<id>configure-proxies-for-eclipserun</id>
+						<phase>package</phase>
+						<configuration>
+							<skip>${skip.eclipserun.proxies}</skip>
+							<target>
+								<touch file="${project.build.directory}/work/configuration/.settings/org.eclipse.core.net.prefs" mkdirs="true"/>
+								
+								<propertyfile file="${project.build.directory}/work/configuration/.settings/org.eclipse.core.net.prefs">
+								  <entry  key="eclipse.preferences.version" value="1"/>
+								  <entry  key="nonProxiedHosts" value="${http.nonProxyHosts}"/>
+								  <entry  key="org.eclipse.core.net.hasMigrated" value="true"/>
+								  <entry  key="proxyData/HTTP/hasAuth" value="false"/>
+								  <entry  key="proxyData/HTTP/host" value="${http.proxyHost}"/>
+								  <entry  key="proxyData/HTTP/port" value="${http.proxyPort}"/>
+								  <entry  key="systemProxiesEnabled" value="false"/>
 								</propertyfile>
 							</target>
 						</configuration>
