--- a/features/org.springsource.sts.product/pom.xml
+++ b/features/org.springsource.sts.product/pom.xml
@@ -33,19 +33,19 @@
 		<profile>
 			<id>e37</id>
 			<properties>
-				<sites>http://download.eclipse.org/releases/indigo/,http://dist.springsource.com/release/TOOLS/third-party/m2e/,http://dist.springsource.org/release/AJDT/configurator/,http://dist.springsource.com/${dist.type}/TOOLS/eclipse-integration-commons/${dist.eclipse-integration-commons-version}</sites>
+				<sites>http://download.eclipse.org/releases/indigo/,http://download.springsource.com/release/TOOLS/third-party/m2e/,http://dist.springsource.com/${dist.type}/TOOLS/eclipse-integration-commons/${dist.eclipse-integration-commons-version}</sites>
 			</properties>
 		</profile>
 		<profile>
 			<id>e38</id>
 			<properties>
-				<sites>http://download.eclipse.org/releases/juno/,http://download.jboss.org/jbosstools/updates/m2eclipse-wtp/,http://repository.sonatype.org/content/repositories/forge-sites/m2e-extras/0.15.0/N/0.15.0.201206251206/,http://dist.springsource.org/release/AJDT/configurator/,http://dist.springsource.com/${dist.type}/TOOLS/eclipse-integration-commons/${dist.eclipse-integration-commons-version}</sites>
+				<sites>http://download.eclipse.org/releases/juno/,http://download.springsource.com/release/TOOLS/third-party/m2e-sts310/,http://dist.springsource.com/${dist.type}/TOOLS/eclipse-integration-commons/${dist.eclipse-integration-commons-version}</sites>
 			</properties>
 		</profile>
 		<profile>
 			<id>e42</id>
 			<properties>
-				<sites>http://download.eclipse.org/releases/juno/,http://download.jboss.org/jbosstools/updates/m2eclipse-wtp/,http://repository.sonatype.org/content/repositories/forge-sites/m2e-extras/0.15.0/N/0.15.0.201206251206/,http://dist.springsource.org/release/AJDT/configurator/,http://dist.springsource.com/${dist.type}/TOOLS/eclipse-integration-commons/${dist.eclipse-integration-commons-version}</sites>
+				<sites>http://download.eclipse.org/releases/juno/,http://download.springsource.com/release/TOOLS/third-party/m2e-sts310/,http://dist.springsource.com/${dist.type}/TOOLS/eclipse-integration-commons/${dist.eclipse-integration-commons-version}</sites>
 			</properties>
 		</profile>
 	</profiles>
@@ -155,6 +155,18 @@
 
 								<taskdef resource="net/sf/antcontrib/antcontrib.properties" />
 								<taskdef resource="org/springframework/build/aws/ant/antlib.xml" />
+								
+								<condition property="httpclient.proxy-autodetect" value="false">
+								    <isset property="http.proxyHost"/>
+								</condition>
+
+								<condition property="httpclient.proxy-host" value="${http.proxyHost}">
+								    <isset property="http.proxyHost"/>
+								</condition>
+
+								<condition property="httpclient.proxy-port" value="${http.proxyPort}">
+								    <isset property="http.proxyPort"/>
+								</condition>
 
 								<property name="site.target.dir" value="${project.build.directory}" />
 								<property name="dist.full.version"
