--- a/features/org.springsource.ggts.product/pom.xml
+++ b/features/org.springsource.ggts.product/pom.xml
@@ -351,6 +351,36 @@
 						</goals>
 					</execution>
 
+					<execution>
+						<id>osx-app-signing</id>
+						<phase>package</phase>
+						<configuration>
+							<skip>${skip.osx.signing}</skip>
+							<target>
+
+								<taskdef resource="net/sf/antcontrib/antcontrib.properties" />
+
+								<exec executable="codesign"
+									dir="${project.build.directory}">
+								    <arg value="-s"/>
+								    <arg value="Developer ID Application: VMware, Inc"/>
+								    <arg value="${build.destination.cocoa.x86}/sts-${unqualifiedVersion}.${p2.qualifier}/GGTS.app"/>
+								</exec>
+
+								<exec executable="codesign"
+									dir="${project.build.directory}">
+								    <arg value="-s"/>
+								    <arg value="Developer ID Application: VMware, Inc"/>
+								    <arg value="${build.destination.cocoa.x86_64}/sts-${unqualifiedVersion}.${p2.qualifier}/GGTS.app"/>
+								</exec>
+
+							</target>
+						</configuration>
+						<goals>
+							<goal>run</goal>
+						</goals>
+					</execution>
+
 				</executions>
 				<dependencies>
 					<dependency>
