--- a/features/org.springsource.sts.product/pom.xml
+++ b/features/org.springsource.sts.product/pom.xml
@@ -290,6 +290,36 @@
 						</goals>
 					</execution>
 
+					<execution>
+						<id>osx-app-signing</id>
+						<phase>package</phase>
+						<configuration>
+							<skip>${skip.osx.signing}</skip>
+							<target>
+
+								<taskdef resource="net/sf/antcontrib/antcontrib.properties" />
+
+								<exec executable="codesign"
+									dir="${project.build.directory}">
+								    <arg value="-s"/>
+								    <arg value="Developer ID Application: VMware, Inc"/>
+								    <arg value="${build.destination.cocoa.x86}/sts-${unqualifiedVersion}.${p2.qualifier}/STS.app"/>
+								</exec>
+
+								<exec executable="codesign"
+									dir="${project.build.directory}">
+								    <arg value="-s"/>
+								    <arg value="Developer ID Application: VMware, Inc"/>
+								    <arg value="${build.destination.cocoa.x86_64}/sts-${unqualifiedVersion}.${p2.qualifier}/STS.app"/>
+								</exec>
+
+							</target>
+						</configuration>
+						<goals>
+							<goal>run</goal>
+						</goals>
+					</execution>
+
 				</executions>
 				<dependencies>
 					<dependency>
@@ -390,45 +420,6 @@
 				</executions>
 			</plugin>
 
-			<plugin>
-			    <groupId>org.codehaus.mojo</groupId>
-			    <artifactId>exec-maven-plugin</artifactId>
-			    <executions>
-			        <execution>
-			            <id>osx-app-signing-32bit</id>
-			            <goals>
-			                <goal>exec</goal>
-			            </goals>
-			            <phase>package</phase>
-			            <configuration>
-							<skip>${skip.osx.signing}</skip>
-			                <executable>codesign</executable>
-			                <arguments>
-			                    <argument>-s</argument>
-			                    <argument>Developer ID Application: VMware, Inc</argument>
-			                    <argument>${build.destination.cocoa.x86}/sts-${unqualifiedVersion}.${p2.qualifier}/STS.app</argument>
-			                </arguments>
-			            </configuration>
-			        </execution>
-			        <execution>
-			            <id>osx-app-signing-64bit</id>
-			            <goals>
-			                <goal>exec</goal>
-			            </goals>
-			            <phase>package</phase>
-			            <configuration>
-							<skip>${skip.osx.signing}</skip>
-			                <executable>codesign</executable>
-			                <arguments>
-			                    <argument>-s</argument>
-			                    <argument>Developer ID Application: VMware, Inc</argument>
-			                    <argument>${build.destination.cocoa.x86_64}/sts-${unqualifiedVersion}.${p2.qualifier}/STS.app</argument>
-			                </arguments>
-			            </configuration>
-			        </execution>
-			    </executions>
-			</plugin>
-			
 		</plugins>
 
 		<pluginManagement>
