added maintenance repo for e42 to adopt latest rc builds for juno sr1

--- a/pom.xml
+++ b/pom.xml
@@ -189,6 +189,11 @@
 		  <url>http://download.eclipse.org/eclipse/updates/4.2/</url>
 		</repository>
 		<repository>
+		  <id>platform</id>
+		  <layout>p2</layout>
+		  <url>http://download.eclipse.org/releases/maintenance/</url>
+		</repository>
+		<repository>
 		  <id>juno</id>
 		  <layout>p2</layout>
 		  <url>http://download.eclipse.org/releases/juno/</url>
