--- a/pom.xml
+++ b/pom.xml
@@ -183,11 +183,11 @@
 		<groovy.compiler.switch>-Dgroovy.compiler.level=18</groovy.compiler.switch>
 	  </properties>
 	  <repositories>
-		<repository>
+<!--		<repository>
 		  <id>platform</id>
 		  <layout>p2</layout>
 		  <url>http://download.eclipse.org/eclipse/updates/4.2/</url>
-		</repository>
+		</repository> -->
 		<repository>
 		  <id>platform</id>
 		  <layout>p2</layout>
