--- a/features/org.springsource.sts.package.e3.8/build.properties
+++ b/features/org.springsource.sts.package.e3.8/build.properties
@@ -1,9 +1,11 @@
 bin.includes=feature.xml,\
              feature.properties,\
              license.txt,\
-             open_source_licenses,\
+             open_source_licenses.txt,\
              p2.inf
               
+root=file:open_source_licenses.txt,file:license.txt
+
 #	root.win32.win32.x86=rootfiles/win32.win32.x86
 	#root.win32.win32.x86_64=rootfiles/win32.win32.x86_64
 		#root.linux.gtk.x86=rootfiles/linux.gtk.x86
