--- a/features/org.springsource.ggts.product/pom.xml
+++ b/features/org.springsource.ggts.product/pom.xml
@@ -388,13 +388,13 @@
 								<exec executable="codesign">
 								    <arg value="-s"/>
 								    <arg value="Developer ID Application: VMware, Inc"/>
-								    <arg value="${build.destination.cocoa.x86}/sts-${unqualifiedVersion}.${p2.qualifier}/GGTS.app"/>
+								    <arg value="${build.destination.cocoa.x86}/ggts-${unqualifiedVersion}.${p2.qualifier}/GGTS.app"/>
 								</exec>
 
 								<exec executable="codesign">
 								    <arg value="-s"/>
 								    <arg value="Developer ID Application: VMware, Inc"/>
-								    <arg value="${build.destination.cocoa.x86_64}/sts-${unqualifiedVersion}.${p2.qualifier}/GGTS.app"/>
+								    <arg value="${build.destination.cocoa.x86_64}/ggts-${unqualifiedVersion}.${p2.qualifier}/GGTS.app"/>
 								</exec>
 
 							</target>
