--- a/features/org.springsource.sts.product/pom.xml
+++ b/features/org.springsource.sts.product/pom.xml
@@ -13,7 +13,6 @@
 	<name>org.springsource.sts.product</name>
 
 	<properties>
-		<features>org.eclipse.m2e.feature.feature.group,org.eclipse.m2e.logback.feature.feature.group,org.maven.ide.eclipse.ajdt.feature.feature.group,org.maven.ide.eclipse.wtp.feature.feature.group,org.sonatype.m2e.buildhelper.feature.feature.group,org.sonatype.m2e.mavenarchiver.feature.feature.group,org.springframework.ide.eclipse.uaa.feature.feature.group</features>
 		<build.destination.cocoa.x86>target/products/org.springsource.sts.ide/macosx/cocoa/x86</build.destination.cocoa.x86>
 		<build.destination.cocoa.x86_64>target/products/org.springsource.sts.ide/macosx/cocoa/x86_64</build.destination.cocoa.x86_64>
 		<build.destination.linux.x86>target/products/org.springsource.sts.ide/linux/gtk/x86</build.destination.linux.x86>
@@ -33,19 +32,22 @@
 		<profile>
 			<id>e37</id>
 			<properties>
+				<features>org.eclipse.m2e.feature.feature.group,org.eclipse.m2e.logback.feature.feature.group,org.maven.ide.eclipse.ajdt.feature.feature.group,org.maven.ide.eclipse.wtp.feature.feature.group,org.sonatype.m2e.buildhelper.feature.feature.group,org.sonatype.m2e.mavenarchiver.feature.feature.group,org.springframework.ide.eclipse.uaa.feature.feature.group</features>
 				<sites>http://download.eclipse.org/releases/indigo/,http://download.springsource.com/release/TOOLS/third-party/m2e/,http://dist.springsource.com/${dist.type}/TOOLS/eclipse-integration-commons/${dist.eclipse-integration-commons-version}</sites>
 			</properties>
 		</profile>
 		<profile>
 			<id>e38</id>
 			<properties>
-				<sites>http://download.eclipse.org/releases/juno/,http://download.eclipse.org/releases/maintenance/,http://download.springsource.com/release/TOOLS/third-party/m2e-sts310/,http://dist.springsource.com/${dist.type}/TOOLS/eclipse-integration-commons/${dist.eclipse-integration-commons-version}</sites>
+				<features>org.eclipse.m2e.feature.feature.group,org.eclipse.m2e.logback.feature.feature.group,org.maven.ide.eclipse.ajdt.feature.feature.group,org.eclipse.m2e.wtp.feature.feature.group,org.sonatype.m2e.buildhelper.feature.feature.group,org.sonatype.m2e.mavenarchiver.feature.feature.group,org.springframework.ide.eclipse.uaa.feature.feature.group</features>
+				<sites>http://download.eclipse.org/releases/juno/,http://download.springsource.com/release/TOOLS/third-party/m2e-sts310/,http://dist.springsource.com/${dist.type}/TOOLS/eclipse-integration-commons/${dist.eclipse-integration-commons-version}</sites>
 			</properties>
 		</profile>
 		<profile>
 			<id>e42</id>
 			<properties>
-				<sites>http://download.eclipse.org/releases/juno/,http://download.eclipse.org/releases/maintenance/,http://download.springsource.com/release/TOOLS/third-party/m2e-sts310/,http://dist.springsource.com/${dist.type}/TOOLS/eclipse-integration-commons/${dist.eclipse-integration-commons-version}</sites>
+				<features>org.eclipse.m2e.feature.feature.group,org.eclipse.m2e.logback.feature.feature.group,org.maven.ide.eclipse.ajdt.feature.feature.group,org.eclipse.m2e.wtp.feature.feature.group,org.sonatype.m2e.buildhelper.feature.feature.group,org.sonatype.m2e.mavenarchiver.feature.feature.group,org.springframework.ide.eclipse.uaa.feature.feature.group</features>
+				<sites>http://download.eclipse.org/releases/juno/,http://download.springsource.com/release/TOOLS/third-party/m2e-sts310/,http://dist.springsource.com/${dist.type}/TOOLS/eclipse-integration-commons/${dist.eclipse-integration-commons-version}</sites>
 			</properties>
 		</profile>
 	</profiles>
