--- a/pom.xml
+++ b/pom.xml
@@ -261,6 +261,71 @@
 	  </modules>
 	</profile>
 	
+		<profile>
+		  <id>e43</id>
+		  <properties>
+			<p2.repository.name>SpringSource Tool Suite for Eclipse 4.3</p2.repository.name>
+			<groovy.compiler.feature>org.codehaus.groovy18.feature.feature.group</groovy.compiler.feature>
+			<groovy.compiler.switch>-Dgroovy.compiler.level=18</groovy.compiler.switch>
+		  </properties>
+		  <repositories>
+			<repository>
+			  <id>platform</id>
+			  <layout>p2</layout>
+			  <url>http://download.eclipse.org/eclipse/updates/4.3/</url>
+			</repository>
+	<!--		<repository>
+			  <id>juno-updates</id>
+			  <layout>p2</layout>
+			  <url>http://download.eclipse.org/releases/maintenance/</url>
+			</repository> -->
+			<repository>
+			  <id>juno</id>
+			  <layout>p2</layout>
+			  <url>http://download.eclipse.org/releases/kepler/</url>
+			</repository>
+			<repository>
+			  <id>ajdt</id>
+			  <layout>p2</layout>
+			  <url>http://download.eclipse.org/tools/ajdt/43/milestone/</url>
+			</repository>
+			<repository>
+			  <id>swtbot</id>
+			  <layout>p2</layout>
+			  <url>http://download.eclipse.org/technology/swtbot/helios/dev-build/update-site/</url>
+			</repository>
+			<repository>
+			  <id>groovy</id>
+			  <layout>p2</layout>
+			  <url>http://dist.springsource.org/milestone/GRECLIPSE/e4.3/</url>
+			</repository>
+			<repository>
+			  <id>atlassian</id>
+			  <layout>p2</layout>
+			  <url>http://update.atlassian.com/atlassian-eclipse-plugin/e3.8</url>
+			</repository>
+			<repository>
+			  <id>egit</id>
+			  <layout>p2</layout>
+			  <url>http://download.eclipse.org/egit/updates</url>
+			</repository>
+			<!--		<repository>
+					  <id>maven-wtp</id>
+					  <layout>p2</layout>
+					  <url>http://download.jboss.org/jbosstools/updates/m2eclipse-wtp/</url>
+					</repository> -->
+			<repository>
+			  <id>maven-extras-mirror</id>
+			  <layout>p2</layout>
+			  <url>http://download.springsource.com/release/TOOLS/third-party/m2e-sts310/</url>
+			</repository>
+		  </repositories>
+		  <modules>
+			<module>features/org.springsource.sts.package.e4.3</module>
+			<module>features/org.springsource.ggts.package.e4.3</module>
+		  </modules>
+		</profile>
+
 	<profile>
 	  <id>spring-site</id>
 	  <modules>
