--- a/pom.xml
+++ b/pom.xml
@@ -114,7 +114,7 @@
 		<repository>
 		  <id>maven-wtp</id>
 		  <layout>p2</layout>
-		  <url>http://download.jboss.org/jbosstools/updates/requirements/m2eclipse/m2eclipse-wtp-0.15.3/</url>
+		  <url>http://download.jboss.org/jbosstools/updates/requirements/m2eclipse/20120926-1337/</url>
 		</repository>
 		<repository>
 		  <id>maven-helper</id>
