--- a/pom.xml
+++ b/pom.xml
@@ -140,11 +140,11 @@
 		  <layout>p2</layout>
 		  <url>http://download.eclipse.org/eclipse/updates/3.8/</url>
 		</repository>
-<!--		<repository>
+		<repository>
 		  <id>juno-updates</id>
 		  <layout>p2</layout>
 		  <url>http://download.eclipse.org/releases/maintenance/</url>
-		</repository> -->
+		</repository>
 		<repository>
 		  <id>juno</id>
 		  <layout>p2</layout>
@@ -205,15 +205,10 @@
 		  <url>http://download.eclipse.org/eclipse/updates/4.2/</url>
 		</repository>
 		<repository>
-		  <id>maintenance-builds</id>
-		  <layout>p2</layout>
-		  <url>http://download.eclipse.org/eclipse/updates/4.2-M-builds</url>
-		</repository>
-<!--		<repository>
 		  <id>juno-updates</id>
 		  <layout>p2</layout>
 		  <url>http://download.eclipse.org/releases/maintenance/</url>
-		</repository> -->
+		</repository>
 		<repository>
 		  <id>juno</id>
 		  <layout>p2</layout>
