integrated new about.html content from legal

--- a/plugins/org.springsource.ggts/build.properties
+++ b/plugins/org.springsource.ggts/build.properties
@@ -24,6 +24,7 @@ bin.includes = META-INF/,\
                lib/,\
                .,\
                content/,\
-               introContent.xml
+               introContent.xml,\
+               about.html
 output.library.jar = bin/
 source.. = src/
