--- a/pom.xml
+++ b/pom.xml
@@ -145,10 +145,15 @@ Optional parameters:
 					<layout>p2</layout>
 					<url>http://download.eclipse.org/eclipse/updates/3.8/</url>
 				</repository>
-				<repository>
+<!--				<repository>
 					<id>juno</id>
 					<layout>p2</layout>
 					<url>http://download.eclipse.org/releases/juno/</url>
+				</repository> -->
+				<repository>
+					<id>kepler</id>
+					<layout>p2</layout>
+					<url>http://download.eclipse.org/releases/kepler/201306070900</url>
 				</repository>
 				<repository>
 					<id>orbit</id>
