--- a/features/org.springsource.sts/feature.properties
+++ b/features/org.springsource.sts/feature.properties
@@ -8,7 +8,7 @@
 featureName=Spring Tool Suite (required)
 
 # "providerName" property - name of the company that provides the feature
-providerName=SpringSource, a division of VMware, Inc.
+providerName=GoPivotal, Inc.
 
 # "updateSiteName" property - label for the update site
 updateSiteName=SpringSource Tool Suite Updates
