--- a/plugins/org.springsource.ggts/plugin.properties
+++ b/plugins/org.springsource.ggts/plugin.properties
@@ -7,7 +7,7 @@ productBlurb=Groovy/Grails Tool Suite \n\
 Version: @QUALIFIER@\n\
 Build Id: @BUILD_ID@\n\
 \n\
-Copyright (c) 2007 - 2013 SpringSource, a division of VMware, Inc.\n\
+Copyright (c) 2007 - 2013 GoPivotal, Inc.\n\
 All rights reserved. Visit http://springsource.org/ggts\n\
 \n\
 This product includes software developed by the\n\
