--- a/plugins/org.springsource.sts/about.properties
+++ b/plugins/org.springsource.sts/about.properties
@@ -9,7 +9,7 @@ title=Spring Tool Suite \n\
 Version: @QUALIFIER@\n\
 Build Id: @BUILD_ID@\n\
 \n\
-Copyright (c) 2007 - 2013 SpringSource, a division of VMware, Inc.\n\
+Copyright (c) 2007 - 2013 GoPivotal, Inc.\n\
 All rights reserved. Visit http://springsource.org/sts\n\
 \n\
 This product includes software developed by the\n\
