--- a/pom.xml
+++ b/pom.xml
@@ -340,6 +340,75 @@ Optional parameters:
 				<module>features/org.springsource.ggts.package.e4.3</module>
 			</modules>
 		</profile>
+		<profile>
+			<id>e44</id>
+			<properties>
+				<p2.repository.name>SpringSource Tool Suite for Eclipse 4.4</p2.repository.name>
+				<groovy.compiler.feature>org.codehaus.groovy18.feature.feature.group</groovy.compiler.feature>
+				<groovy.compiler.switch>-Dgroovy.compiler.level=18</groovy.compiler.switch>
+			</properties>
+			<repositories>
+				<repository>
+					<id>platform</id>
+					<layout>p2</layout>
+					<url>http://download.eclipse.org/eclipse/updates/4.3/</url>
+				</repository>
+				<!--		<repository>
+				<id>juno-updates</id>
+				<layout>p2</layout>
+				<url>http://download.eclipse.org/releases/maintenance/</url>
+				</repository> -->
+				<repository>
+					<id>juno</id>
+					<layout>p2</layout>
+					<url>http://download.eclipse.org/releases/kepler/</url>
+				</repository>
+				<repository>
+					<id>orbit</id>
+					<layout>p2</layout>
+					<url>http://download.eclipse.org/tools/orbit/downloads/drops/R20130517111416/repository/</url>
+				</repository>
+				<repository>
+					<id>mylyn</id>
+					<layout>p2</layout>
+					<url>http://download.eclipse.org/mylyn/releases/latest</url>
+				</repository>
+				<repository>
+					<id>ajdt</id>
+					<layout>p2</layout>
+					<url>http://download.eclipse.org/tools/ajdt/43/dev/update</url>
+				</repository>
+				<repository>
+					<id>swtbot</id>
+					<layout>p2</layout>
+					<url>http://download.eclipse.org/technology/swtbot/helios/dev-build/update-site/</url>
+				</repository>
+				<repository>
+					<id>groovy</id>
+					<layout>p2</layout>
+					<url>http://dist.springsource.org/milestone/GRECLIPSE/e4.3/</url>
+				</repository>
+				<repository>
+					<id>atlassian</id>
+					<layout>p2</layout>
+					<url>http://update.atlassian.com/atlassian-eclipse-plugin/rest/e3.6</url>
+				</repository>
+				<repository>
+					<id>maven-wtp</id>
+					<layout>p2</layout>
+					<url>http://download.eclipse.org/m2e-wtp/releases/kepler</url>
+				</repository>
+				<repository>
+					<id>maven-extras-mirror</id>
+					<layout>p2</layout>
+					<url>http://download.springsource.com/release/TOOLS/third-party/m2e-sts310/</url>
+				</repository>
+			</repositories>
+			<modules>
+				<module>features/org.springsource.sts.package.e4.3</module>
+				<module>features/org.springsource.ggts.package.e4.3</module>
+			</modules>
+		</profile>
 
 		<profile>
 			<id>spring-site</id>
