updated copyright statement in feature properties

--- a/features/org.springsource.ggts/feature.properties
+++ b/features/org.springsource.ggts/feature.properties
@@ -19,7 +19,7 @@ This feature is required to install the Groovy/Grails Tool Suite
 
 # "copyright" property - text of the Copyright
 copyright=\
-Copyright (c) 2012 VMware, Inc.
+Copyright (c) 2013 GoPivotal, Inc.
 
 ################ end of copyright property ####################################
 
