fixed e44 build definitions

--- a/pom.xml
+++ b/pom.xml
@@ -280,7 +280,7 @@ Optional parameters:
 				<url>http://download.eclipse.org/releases/maintenance/</url>
 				</repository> -->
 				<repository>
-					<id>juno</id>
+					<id>kepler</id>
 					<layout>p2</layout>
 					<url>http://download.eclipse.org/releases/kepler/</url>
 				</repository>
